# steely

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/steely/: __init__.py  eda.ipynb  nltk_loader.py  roberta_finetune.py  simple_clf.ipynb
src/steely/task_1/: correlation_signal_analysis.ipynb  correlation_signal_classifier.py  roberta_finetune.py  roberta_inference.py  simple_clf.ipynb  simple_clf_inference.py  word_correlations.py
src/steely/task_2/: correlation_signal_analysis.ipynb  roberta_finetune.py  roberta_inference.py  simple_clf.ipynb  simple_clf_inference.py
