[project]
name = "steely"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Seeliger", email = "maximilian.seeliger@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pip>=25.1.1",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "tira>=0.0.166",
]

[project.scripts]
steely = "steely:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
