[project]
name = "steely"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Seeliger", email = "maximilian.seeliger@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pip>=25.1.1",
    "polars>=1.29.0",
    "scikit-learn>=1.6.1",
    "tira",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]

[project.scripts]
steely = "steely:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tira = { git = "https://github.com/tira-io/tira.git", subdirectory = "python-client" }
